# numbarrow

./: .gitignore  LICENSE  README.md  arrow_array_utils.py  demo_map_in_arrow.py  pyproject.toml  requirements.txt  test_arrow_array_utils.py  test_utils.py  utils.py
.doctrees/: environment.pickle
.github/workflows/: numbarrow_ci.yml  numbarrow_release.yml
docs/: conf.py
numbarrow/core/: adapters.py  mapinarrow_factory.py
numbarrow/utils/: arrow_array_utils.py  utils.py
test/: demo_map_in_arrow.py  test_adapters.py  test_arrow_array_utils.py  test_is_null.py  test_utils.py
